// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ResultsMessage should handle single results 1`] = `
<div
  className="u-flex u-flexJustifyCenter"
>
  <p
    className="ResultsMessage_text_lesmrd"
  >
    Found 
    1
     
    result
     for 
    <b>
      test
    </b>
  </p>
</div>
`;

exports[`Component: ResultsMessage should render 1`] = `
<div
  className="u-flex u-flexJustifyCenter"
>
  <p
    className="ResultsMessage_text_lesmrd"
  >
    Found 
    50
     
    results
     for 
    <b>
      test
    </b>
  </p>
</div>
`;
